# openai-cli

./: .gitignore  .pylintrc  LICENSE  README.md  openai_asst.py  openai_cli.py  openai_utils.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-package.yml
