# https://github.com/pypa/sampleproject/blob/main/pyproject.toml
[project]
name = "openai-cli"
version = "0.1.0"
description = "Command line (CLI) application of OpenAI python client library"
readme = "README.md"
# TODO Tested on python 3.10.2. need to test on 3.8
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["openai", "cli", "command-line"]
authors = [
    { name = "Imtiaz Rahi", email = "imtiaz.rahi@gmail.com" }
]
# Name or the names of the organization who currently maintains the project
maintainers = [
    { name = "Imtiaz Rahi", email = "imtiaz.rahi@gmail.com" }
]
# Classifiers help users find your project by categorizing it.
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "python_requires" below.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "python-dotenv",
    "click",
    "openai",
]
[project.urls]
"Homepage" = "https://github.com/uhurutek/openai-cli"
"Bug Reports" = "https://github.com/uhurutek/openai-cli/issues"
"Source" = "https://github.com/uhurutek/openai-cli"
[project.scripts]
openai_asst = "openai_asst:main"
openai_cli = "openai_cli:main"
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"